latex2mmlc/src/snapshots/latex2mmlc__tests__overset_with_prime.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\overset{!}{=}'"
---
<math>
    <msup>
        <mover>
            <mo>=</mo>
            <mo>!</mo>
        </mover>
        <mo>′</mo>
    </msup>
</math>
