latex2mmlc/src/snapshots/latex2mmlc__tests__plus_after_equal.snap
---
source: latex2mmlc/src/lib.rs
expression: x = +4
---
<math>
    <mi>x</mi>
    <mo>=</mo>
    <mo form="prefix">+</mo>
    <mn>4</mn>
</math>
