latex2mmlc/src/snapshots/latex2mmlc__tests__plus_after_equal_subscript.snap
---
source: latex2mmlc/src/lib.rs
expression: x =_+4
---
<math>
    <mi>x</mi>
    <msub>
        <mo>=</mo>
        <mo>+</mo>
    </msub>
    <mn>4</mn>
</math>
