latex2mmlc/src/snapshots/latex2mmlc__tests__prime_alone.snap
---
source: latex2mmlc/src/lib.rs
expression: "'"
---
<math>
    <msup>
        <mrow>
        </mrow>
        <mo>′</mo>
    </msup>
</math>
