latex2mmlc/src/snapshots/latex2mmlc__tests__prime_command.snap
---
source: latex2mmlc/src/lib.rs
expression: "f^\\prime"
---
<math>
    <msup>
        <mi>f</mi>
        <mo>′</mo>
    </msup>
</math>
