latex2mmlc/src/snapshots/latex2mmlc__tests__product.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\prod_n n"
---
<math>
<munder>
    <mo>∏</mo>
    <mi>n</mi>
</munder>
<mi>n</mi>
</math>
